# cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp
