PROJECT(Projectname)

CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PROJECTNAME_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "")

# set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
# include(somemodule) # create cmake/somemodule.cmake

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
